# code-ml4cps-paper

./: .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  config.toml  pyproject.toml
container_component_src/: main.py  model_serving.py  utils.py
container_component_src/dask_preprocessor/: preprocessor.py
container_component_src/eval/: evaluator.py
container_component_src/model/: callbacks.py  datamodule.py  lightning_module.py
container_component_src/serving/: __init__.py  kserve.py
manifests/: kserve-model.yaml
notebooks/: 01_exploration.ipynb  query_kserve_model.ipynb
pipeline/: auth_session.py  compile_and_run_pipeline.py  components.py  pipeline_definition.py  serving_pipeline.py
serving/: inference-service.yaml
