[project]
name = "code-ml4cps-paper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bokeh>=3.7.2",
    "click>=8.1.8",
    "dask>=2025.3.0",
    "dask-kubernetes>=2025.1.1",
    "ipykernel>=6.29.5",
    "ipython>=9.1.0",
    "jupyter>=1.1.1",
    "kfp>=2.12.1",
    "kfp-kubernetes>=1.4.0",
    "kserve>=0.15.0",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pyarrow>=19.0.1",
    "python-dotenv>=1.1.0",
    "pytorch-lightning>=2.5.1",
    "requests>=2.32.3",
    "s3fs>=2025.3.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "toml>=0.10.2",
    "torch>=2.6.0",
    "torch-model-archiver>=0.12.0",
    "xlrd>=2.0.1",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "matplotlib>=3.10.1",
    "nbstripout>=0.8.1",
    "pdbpp>=0.10.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pipeline", "container_component_src"]
